// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Editor Editor Component should autoFocus the title when there is not one 1`] = `
<styled.div>
  <RichTextEditor
    autoFocus={true}
    controls={
      {
        "bold": true,
        "emphasis": true,
        "piping": true,
      }
    }
    data-test="title-input"
    disabled={false}
    id="confirmation-title"
    label="Confirmation question"
    maxHeight={12}
    multiline={false}
    name="title"
    onUpdate={[Function]}
    placeholder=""
    size="large"
    testSelector="txt-confirmation-title"
    value={null}
  />
  <styled.div>
    <withValidationError(undefined)
      confirmationoption={
        {
          "description": "Positive description",
          "id": "1",
          "label": "Positive label",
          "validationErrorInfo": [],
        }
      }
      data-test="positive-input"
      enableValidationMessage={true}
      label="Positive confirmation text"
      name="positive"
      onChange={[MockFunction]}
      onUpdate={[MockFunction]}
      value={
        {
          "description": "Positive description",
          "id": "1",
          "label": "Positive label",
          "validationErrorInfo": [],
        }
      }
    />
    <Styled(withValidationError(undefined))
      confirmationoption={
        {
          "description": "Negative description",
          "id": "2",
          "label": "Negative label",
          "validationErrorInfo": [],
        }
      }
      data-test="negative-input"
      label="Negative confirmation text"
      name="negative"
      onChange={[MockFunction]}
      onUpdate={[MockFunction]}
      value={
        {
          "description": "Negative description",
          "id": "2",
          "label": "Negative label",
          "validationErrorInfo": [],
        }
      }
    />
  </styled.div>
</styled.div>
`;

exports[`Editor Editor Component should render 1`] = `
<styled.div>
  <RichTextEditor
    autoFocus={false}
    controls={
      {
        "bold": true,
        "emphasis": true,
        "piping": true,
      }
    }
    data-test="title-input"
    disabled={false}
    id="confirmation-title"
    label="Confirmation question"
    maxHeight={12}
    multiline={false}
    name="title"
    onUpdate={[Function]}
    placeholder=""
    size="large"
    testSelector="txt-confirmation-title"
    value="My first confirmation"
  />
  <styled.div>
    <withValidationError(undefined)
      confirmationoption={
        {
          "description": "Positive description",
          "id": "1",
          "label": "Positive label",
          "validationErrorInfo": [],
        }
      }
      data-test="positive-input"
      enableValidationMessage={true}
      label="Positive confirmation text"
      name="positive"
      onChange={[MockFunction]}
      onUpdate={[MockFunction]}
      value={
        {
          "description": "Positive description",
          "id": "1",
          "label": "Positive label",
          "validationErrorInfo": [],
        }
      }
    />
    <Styled(withValidationError(undefined))
      confirmationoption={
        {
          "description": "Negative description",
          "id": "2",
          "label": "Negative label",
          "validationErrorInfo": [],
        }
      }
      data-test="negative-input"
      label="Negative confirmation text"
      name="negative"
      onChange={[MockFunction]}
      onUpdate={[MockFunction]}
      value={
        {
          "description": "Negative description",
          "id": "2",
          "label": "Negative label",
          "validationErrorInfo": [],
        }
      }
    />
  </styled.div>
</styled.div>
`;
